--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Beatrice Womack - Frontend Developer Portfolio">
-    <title>Landing</title>
+    <meta name="description" content="Beatrice Womack - Developer Portfolio">
+    <title>Beatrice | kyubea.online</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
